* Solución a varios problemas * Incorporación del Chat * Compatibilidad básica con ClaroVideo y Blim

--- a/manifest.json
+++ b/manifest.json
@@ -33,6 +33,9 @@
 		"scripts": [
 			"assets/js/providers/base.js", 
 			"assets/js/providers/netflix.js", 
+			"assets/js/providers/clarovideo.js", 
+			"assets/js/providers/blim.js", 
+
 			"background.js"
 		],
 		"persistent": false
@@ -40,17 +43,20 @@
 
 	"content_scripts": [
 		{
-			"matches": ["https://www.netflix.com/watch/*"],
-     		"css": ["assets/css/client.css"],
+			"matches": ["https://www.netflix.com/*", "http://playerhtml5.clarovideo.net/*", "http://www.blim.com/*"],
+     		"css": ["assets/css/chat.css"],
       		"js": [
       			"assets/js/providers/base.js", 
 				"assets/js/providers/netflix.js",
+				"assets/js/providers/clarovideo.js",
+				"assets/js/providers/blim.js", 
 
       			"assets/js/libs/firebase.js",
       			"assets/js/libs/jquery-2.2.3.min.js", 
       			"assets/js/libs/jquery.query-object.js",
       			
-      			"assets/js/streaming.js"
+      			"assets/js/streaming.js",
+      			"assets/js/chat.js"
       		]
 		}
 	],
