* Bug solucionado: Escribir en el chat ya no transmite los eventos al reproductor. * Función experimental: Cuando un anfitrión cambie de episodio los invitados también cambiarán a ese episodio (pero será necesario volver a conectarse) * Arreglo de problemas

--- a/manifest.json
+++ b/manifest.json
@@ -54,6 +54,7 @@
       			"assets/js/libs/firebase.js",
       			"assets/js/libs/jquery-2.2.3.min.js", 
       			"assets/js/libs/jquery.query-object.js",
+      			"assets/js/libs/moment.min.js",
       			
       			"assets/js/streaming.js",
       			"assets/js/chat.js"
