--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,12 @@
 	"name": "Wootsie",
 	"version": "0.3",
 	"version_name": "beta 1.3",
-	"description": "Ve sincronizadamente tus series y películas favoritas de Netflix, ClaroVideo, Blim y Youtube.",
+	"description": "__MSG_app_description__",
 	"author": "Ivan Bravo Bravo",
 	"homepage_url": "http://sie.woots.mx/",
 	"minimum_chrome_version": "49",
 	"offline_enabled": false,
+	"default_locale": "es",
 
 	"icons": {
 		"48": "assets/icon48.png"
@@ -16,7 +17,7 @@
 	"page_action": {
 		"default_icon": "assets/icon16.png",
 		"default_popup": "popup.html",
-		"default_title": "Refresca la página para comenzar"
+		"default_title": "__MSG_app_reload__"
 	},
 
 	"permissions": [
