--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version": 2,
 	"name": "Wootsie",
-	"version": "0.5",
-	"version_name": "beta 1.5",
+	"version": "0.6",
+	"version_name": "beta 1.6",
 	"description": "__MSG_app_description__",
 	"author": "Ivan Bravo Bravo",
 	"homepage_url": "http://sie.woots.mx/",
@@ -31,7 +31,8 @@
 			"assets/js/providers/base.js", 
 			"assets/js/providers/netflix.js", 
 			"assets/js/providers/clarovideo.js", 
-			"assets/js/providers/blim.js", 
+			"assets/js/providers/blim.js",
+			"assets/js/providers/mubi.js", 
 			"assets/js/providers/youtube.js", 
 			"assets/js/providers/vimeo.js",
 
@@ -42,13 +43,14 @@
 
 	"content_scripts": [
 		{
-			"matches": ["https://www.netflix.com/*", "http://playerhtml5.clarovideo.net/*", "http://www.blim.com/*", "https://www.youtube.com/*", "https://vimeo.com/*"],
+			"matches": ["https://www.netflix.com/*", "http://playerhtml5.clarovideo.net/*", "http://www.blim.com/*", "https://www.youtube.com/*", "https://vimeo.com/*", "https://mubi.com/*"],
      		"css": ["assets/css/chat.css"],
       		"js": [
       			"assets/js/providers/base.js", 
 				"assets/js/providers/netflix.js",
 				"assets/js/providers/clarovideo.js",
 				"assets/js/providers/blim.js",
+				"assets/js/providers/mubi.js",
 				"assets/js/providers/youtube.js",
 				"assets/js/providers/vimeo.js",
 
